--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "homepage": "https://github.com/euidong/oop-design-pattern#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   }
